--- a/app/partials/administration/hr/settings/settings.html
+++ b/app/partials/administration/hr/settings/settings.html
@@ -13,7 +13,7 @@
     <ul>
       <a ng-click="goTo('none','/')"><li style="display:inline">Home</li></a> >
       <a ng-click="goTo('administration','/modules/administration')"><li style="display:inline">Administration</li></a> >
-      <a ng-click="goTo('administration','/modules/administration/hr')"><li style="display:inline">Human Resources</li></a> >
+      <a ng-click="goTo('administration','/administration/hr')"><li style="display:inline">Human Resources</li></a> >
       <a><li style="display:inline">Settings</li></a>
     </ul>
   </div>
